--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>First PWA</title>
         <link rel="stylesheet" href="src/style.css">
+        <link rel="manifest" href="/manifest.json">
     </head>
     <body>
-        <p>Hi my name is . And this is my first PWA</p>
+        <p>Hi my name is Gelford Penaranda. And this is my first PWA</p>
         <script src="src/index.js"></script>
     </body>
+    <script src="./src/index.js"></script>
 </html>
 
