--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#5A0FC8">
         <title>First PWA</title>
         <link rel="stylesheet" href="src/style.css">
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <p>Hi my name is Gelford Penaranda. And this is my first PWA</p>
         <script src="src/index.js"></script>
     </body>
     <script src="./src/index.js"></script>
+
 </html>
 
