--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#5A0FC8">
         <title>First PWA</title>
-        <link rel="stylesheet" href="src/style.css">
-        <link rel="manifest" href="manifest.json">
+        <link rel="stylesheet" href="style.css">
+        <link rel="manifest" href="manifest.json"> 
+        <link rel="apple-touch-icon" href="images/Logo192.png">
     </head>
     <body>
-        <p>Hi my name is Gelford Penaranda. And this is my first PWA</p>
-        <script src="src/index.js"></script>
+        <p>Hi my name is Gelford. This is my first PWA</p>
+        <script src="./src/index.js"></script>
     </body>
-    <script src="./src/index.js"></script>
-
 </html>
-
