--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#5A0FC8">
         <title>First PWA</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./src/style.css">
         <link rel="manifest" href="manifest.json"> 
         <link rel="apple-touch-icon" href="images/Logo192.png">
     </head>
